test/valid/58170_factorial/factorial.agu
-- Author: 58170, Guilherme Sousa

let factorial (n) : Int -> Int = 
  if n == 0 then 1 else n * factorial(n - 1)

let main(_) : Unit -> Unit =
  print(factorial(5))