test/invalid-syntax/58170_missingParen/missingParen.agu
-- Author: 58170, Guilherme Sousa

let main : Unit =
  print("Hello, world!"